--- a/app/views/privates/book_borrowed.scala.html
+++ b/app/views/privates/book_borrowed.scala.html
@@ -18,14 +18,13 @@
     	<br/>
 
     	<fieldset>
-    		<legend align="center"><h1>Solicitar Livro(s)</h1></legend>
-			@helper.form(action = routes.Book.request_book(), 'id -> "book_request") {
+    		<legend align="center"><h1>Quem pegou?</h1></legend>
+			@helper.form(action = routes.Book.borrowed_book(), 'id -> "book_borrowed") {
 				@for(book <- booksNames) {
-					<input type='checkbox' id="@book.getId" name='@book.getId' value=@book.getId>@book.getName (email: @book.getOwner.getEmail)<br>
+					@book.getName (emprestado para: @book.getHolder.getEmail)<br>
 				}
 
 				<br/>
-			   	<input type="submit" name="solicitar" value="Solicitar">
 			   	<input type="submit" name="voltar" value="Voltar">
 			}
 		</fieldset>
